--- a/templates/channels/channel_claim.haml
+++ b/templates/channels/channel_claim.haml
@@ -1,7 +1,7 @@
 -extends "smartmin/base.html"
 -load i18n compress temba
 
--block title
+-block title-text
   -trans "New Channel"
 
 -block content
