--- a/templates/channels/channel_claim_number.haml
+++ b/templates/channels/channel_claim_number.haml
@@ -3,9 +3,7 @@
 -load compress temba
 -load i18n
 
--block title-icon
-
--block title
+-block title-text
   -trans "Connect a Phone Number"
 
 -block content
