--- a/templates/channels/channel_configuration.haml
+++ b/templates/channels/channel_configuration.haml
@@ -1,7 +1,7 @@
 -extends "smartmin/read.html"
 -load i18n channels
 
--block title
+-block title-text
   {{ object.get_channel_type_display }} Configuration
 
 -block subtitle
