--- a/templates/channels/channellog_msg.haml
+++ b/templates/channels/channellog_msg.haml
@@ -1,7 +1,7 @@
 -extends "channels/channellog_owned_base.html"
 -load i18n contacts
 
--block title
+-block title-text
   -trans "Message Log"
 
 -block group_object
