--- a/templates/contacts/contact_blocked.html
+++ b/templates/contacts/contact_blocked.html
@@ -2,5 +2,5 @@
 {% load i18n %}
 
 {% block subtitle %}
-  <div class="text-base">{% trans "All inbound messages from these contacts are ignored. They have also been removed from all groups." %}</div>
+  {% trans "All inbound messages from these contacts are ignored. They have also been removed from all groups." %}
 {% endblock subtitle %}
