--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -162,7 +162,8 @@
                       .flex.flex-row
                         -block title
                           #title-text
-                            {{title}}
+                            -block title-text
+                              {{title}}
                     .line.flex-grow.mr-2.ml-6
                       .h-0.border.border-gray-200
                     
