--- a/templates/locations/adminboundary_alias.haml
+++ b/templates/locations/adminboundary_alias.haml
@@ -14,7 +14,7 @@
       --textarea-height: 130px;
     }
 
--block title
+-block title-text
   -blocktrans trimmed with name=object.name
     Aliases for {{ name }}
 
