--- a/templates/orgs/org_sub_orgs.haml
+++ b/templates/orgs/org_sub_orgs.haml
@@ -3,9 +3,8 @@
 -load compress temba smartmin humanize
 -load i18n
 
--block title
-  #title-text
-    -trans "Workspaces"
+-block title-text
+  -trans "Workspaces"
 
 -block subtitle
   {{user_org.name|capfirst}}
