--- a/templates/orgs/orgimport_create.haml
+++ b/templates/orgs/orgimport_create.haml
@@ -1,7 +1,7 @@
 -extends "smartmin/form.html"
 -load smartmin i18n humanize
 
--block title
+-block title-text
   -trans "Import Flows and Campaigns"
 
 -block content
