--- a/templates/tickets/ticketer_connect.html
+++ b/templates/tickets/ticketer_connect.html
@@ -1,9 +1,9 @@
 {% extends "smartmin/base.html" %}
 {% load i18n compress temba %}
 
-{% block title %}
+{% block title-text %}
   {% trans "Connect a Ticketing Service" %}
-{% endblock title %}
+{% endblock title-text %}
 {% block content %}
   {% blocktrans trimmed %}
     Ticketing Services let a human agent take over communication for a contact. In a flow you can open a new
