--- a/templates/tickets/types/zendesk/configure.html
+++ b/templates/tickets/types/zendesk/configure.html
@@ -6,7 +6,7 @@
   <h2 class="font_normalize header-margin title">
     {{ ticketer.type.name }}
     {% trans "Ticketing Service" %}
-    <div class="ticketer-name">{{ ticketer.name }}</div>
+    <div class="ticketer-name" id="title-text">{{ ticketer.name }}</div>
   </h2>
 {% endblock title %}
 {% block content %}
