--- a/templates/channels/channellog_call.haml
+++ b/templates/channels/channellog_call.haml
@@ -1,7 +1,7 @@
 -extends "channels/channellog_owned_base.html"
 -load i18n
 
--block title
+-block title-text
   -trans "Call Log"
 
 -block group_object
