--- a/templates/classifiers/classifier_connect.html
+++ b/templates/classifiers/classifier_connect.html
@@ -1,9 +1,9 @@
 {% extends "smartmin/base.html" %}
 {% load i18n compress temba %}
 
-{% block title %}
+{% block title-text %}
   {% trans "Connect a Classifier" %}
-{% endblock title %}
+{% endblock title-text %}
 {% block content %}
   {% blocktrans trimmed %}
     Classifiers let you interpret words and phrases into intents you can act on. Various services let you
