--- a/templates/contacts/contact_archived.html
+++ b/templates/contacts/contact_archived.html
@@ -1,7 +1,6 @@
 {% extends "contacts/contact_list.html" %}
 {% load i18n %}
 
-{% block title-text %}
-  <div class="title leading-tight">{% trans "Archived Contacts" %}</div>
-  <div class="text-base mt-1">{% trans "These contacts have been removed from all groups and can be deleted permanently." %}</div>
-{% endblock title-text %}
+{% block subtitle %}
+  {% trans "These contacts have been removed from all groups and can be deleted permanently." %}
+{% endblock subtitle %}
