--- a/templates/contacts/contact_stopped.html
+++ b/templates/contacts/contact_stopped.html
@@ -2,5 +2,5 @@
 {% load i18n %}
 
 {% block subtitle %}
-  <div class="text-base">{% trans "These contacts have opted out and you can no longer send them messages, but inbound messages will unstop them. They have also been removed from all groups." %}</div>
+  {% trans "These contacts have opted out and you can no longer send them messages, but inbound messages will unstop them. They have also been removed from all groups." %}
 {% endblock subtitle %}
