--- a/templates/orgs/org_manage_accounts.haml
+++ b/templates/orgs/org_manage_accounts.haml
@@ -1,7 +1,7 @@
 -extends 'smartmin/form.html'
 -load smartmin temba compress i18n
 
--block title
+-block title-text
   -trans "Manage Logins"
 
 -block subtitle
