--- a/templates/request_logs/httplog_read.haml
+++ b/templates/request_logs/httplog_read.haml
@@ -1,15 +1,13 @@
 -extends "smartmin/read.html"
 -load i18n compress humanize
 
--block title
-
-  #title-text
-    -if object.flow
-      -trans "Flow Event"
-    -elif object.classifier
-      -trans "Classifier Event"
-    -elif object.channel
-      -trans "Channel Event"
+-block title-text
+  -if object.flow
+    -trans "Flow Event"
+  -elif object.classifier
+    -trans "Classifier Event"
+  -elif object.channel
+    -trans "Channel Event"
 
 -block content
   .card.flex.mt-0.flex-shrink-0.flex-wrap
