--- a/templates/triggers/trigger_create.html
+++ b/templates/triggers/trigger_create.html
@@ -1,10 +1,9 @@
 {% extends "smartmin/base.html" %}
 {% load i18n %}
 
-{% block title %}
-  {{ title }}
-  <div class="mb-3 text-xl mt-2">{% trans "Triggers allow users to start flows based on user actions or schedules." %}</div>
-{% endblock title %}
+{% block subtitle %}
+  {% trans "Triggers allow users to start flows based on user actions or schedules." %}
+{% endblock subtitle %}
 {% block content %}
   {% include "formax.html" %}
 {% endblock content %}
