--- a/templates/notifications/incidents/org_flagged.html
+++ b/templates/notifications/incidents/org_flagged.html
@@ -1,5 +1,6 @@
--load i18n
+{% load i18n %}
 
--blocktrans
+{% blocktrans %}
   Your workspace has been flagged due to suspicious activity. To re-enable starting flows and sending messages, please
   contact support.
+{% endblocktrans %}
