--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -163,7 +163,7 @@
                     <a href="{{ request.path }}?sort_on=last_seen_on{% if search %}&search={{ search|escape }}{% endif %}">
                       <div>
                         {% trans "Last Seen On" %}
-                        <temba-icon name="sort_down" class="sorting">
+                        <temba-icon name="sort_down" class="sorting show">
                         </temba-icon>
                       </div>
                     </a>
@@ -171,7 +171,7 @@
                     <a href="{{ request.path }}?sort_on=-last_seen_on{% if search %}&search={{ search|escape }}{% endif %}">
                       <div>
                         {% trans "Last Seen On" %}
-                        <temba-icon name="sort_up" class="sorting">
+                        <temba-icon name="sort_up" class="sorting show">
                         </temba-icon>
                       </div>
                     </a>
@@ -194,7 +194,7 @@
                     <a href="{{ request.path }}?sort_on=created_on{% if search %}&search={{ search|escape }}{% endif %}">
                       <div>
                         {% trans "Created On" %}
-                        <temba-icon name="sort_down" class="sorting">
+                        <temba-icon name="sort_down" class="sorting show">
                         </temba-icon>
                       </div>
                     </a>
@@ -202,7 +202,7 @@
                     <a href="{{ request.path }}?sort_on=-created_on{% if search %}&search={{ search|escape }}{% endif %}">
                       <div>
                         {% trans "Created On" %}
-                        <temba-icon name="sort_up" class="sorting">
+                        <temba-icon name="sort_up" class="sorting show">
                         </temba-icon>
                       </div>
                     </a>
