--- a/templates/channels/types/messagebird/claim.haml
+++ b/templates/channels/types/messagebird/claim.haml
@@ -3,12 +3,12 @@
 
 -block pre-form
   -blocktrans trimmed with name=brand.name
-    You can connect a <a href="https://messagebird.com/en/">Messagebird</a> Account to your {{ name}} account
+    You can connect a <a href="https://messagebird.com/en/">Messagebird</a> Account to your {{ name }} account
     to automate sending and receiving messages via Messagebird phone numbers and shortcodes.
 
   .mt-4
-    -blocktrans trimmed with format='<div class="code inline py-1">channel-uuid/user-uuid</div>'
-      Each message sent to the channel will have a URN in the format {{ format }} where the channel UUID is the FreshChat channel's UUID.
+    -blocktrans trimmed with format='<div class="code inline py-1">tel:</div>'
+      Each message sent to the channel will have a {{ format }} URN.
 
   %ol.steps.card
     %li
@@ -24,9 +24,7 @@
     %li
       -blocktrans trimmed
         Once you press Submit below with all the information configured, the confirmation page will give you the URL to use for the Messagebird Webhooks.
-        Create a Flow in the Flowbuilder from a Template, and select the "Call HTTP endpoint with SMS" templatw
-        In your created flow, select the same phone number you've configured here, and then under the Forward to URL node, 
-        set the content type header to JSON, and then Enter the URL you'll get on the confirmation page here.
+        You'll need to provide this URL to the {{ name }} team. You can also create a {{ name }} flow to forward SMS messages to this URL.
 
 -block extra-style
   {{ block.super }}
