--- a/templates/flows/flowstart_list.html
+++ b/templates/flows/flowstart_list.html
@@ -1,6 +1,5 @@
 {% extends "smartmin/list.html" %}
-{% load smartmin sms temba compress flows %}
-{% load i18n humanize %}
+{% load smartmin sms temba i18n humanize %}
 
 {% block table %}
   <table class="list lined header">
@@ -51,7 +50,7 @@
             {% endif %}
             <div style="padding-top: 10px; max-height: 150px; overflow-y: auto;" class="flex flex-wrap">
               {% include "includes/recipients.html" with groups=obj.groups.all contacts=obj.contacts.all query=obj.query %}
-              {{ obj.exclusions|exclusions }}
+              {% include "includes/exclusions.html" with exclusions=obj.exclusions %}
             </div>
           </td>
           <td style="text-align: right">
