claim text update for status

--- a/templates/channels/types/messagebird/claim.haml
+++ b/templates/channels/types/messagebird/claim.haml
@@ -19,7 +19,8 @@
         the <a href="https://dashboard.messagebird.com/en-us/numbers">My Numbers</a> section of the Messagebird API.
     %li
       -blocktrans trimmed
-        Once you press Submit below with all the information configured, the confirmation page will give you the URL to use for the Messagebird Webhooks.
+        Once you press Submit below with all the information configured, the confirmation page will give you the URL to use for the Messagebird Message Webhooks.
+        You'll also receive a url for message status updates. You can configure this url in the Dashboard under Developers, API Settings.
         You'll need to provide this URL to the {{ name }} team. You can also create a {{ name }} flow to forward SMS messages to this URL.
 
 -block extra-style
