Fix typo in template

--- a/templates/orgs/org_export.html
+++ b/templates/orgs/org_export.html
@@ -122,7 +122,7 @@
         });
       }
 
-      const preSelectFlow = document.querySelector('temba-checkbox[name="flows"][value="{{ initial_flow_id }};"]');
+      const preSelectFlow = document.querySelector('temba-checkbox[name="flows"][value="{{ initial_flow_id }}"]');
       const preSelectCampaign = document.querySelector('temba-checkbox[name="campaigns"][value="{{ initial_campaign_id }}"]');
 
       if (preSelectFlow) {
