--- a/templates/orgs/org_export.html
+++ b/templates/orgs/org_export.html
@@ -34,20 +34,20 @@
                   {% with exportable_type=exportable|object_class_name|lower %}
                     {% ifchanged exportable_type %}
                       <div class="flex">
-                        <input type="checkbox"
-                               data-bucket="bucket{{ bucket_idx }}"
-                               data-type="{{ exportable_type }}"
-                               class="bucket-toggle-type" />
-                        &nbsp;{{ exportable|verbose_name_plural|capfirst }}
+                        <temba-checkbox data-bucket="bucket{{ bucket_idx }}"
+                                        data-type="{{ exportable_type }}"
+                                        label="{{ exportable|verbose_name_plural|capfirst }}"
+                                        class="bucket-toggle-type">
+                        </temba-checkbox>
                       </div>
                     {% endifchanged %}
                     <div class="w-2/5 inline-flex pl-8">
-                      <input type="checkbox"
-                             name="{{ exportable_type }}s"
-                             value="{{ exportable.id }}"
-                             data-bucket="bucket{{ bucket_idx }}"
-                             data-type="{{ exportable_type }}" />
-                      &nbsp;{{ exportable.name }}
+                      <temba-checkbox name="{{ exportable_type }}s"
+                                      value="{{ exportable.id }}"
+                                      data-bucket="bucket{{ bucket_idx }}"
+                                      data-type="{{ exportable_type }}"
+                                      label="{{ exportable.name }}">
+                      </temba-checkbox>
                     </div>
                   {% endwith %}
                 {% endfor %}
@@ -76,17 +76,20 @@
                 {% with exportable_type=exportable|object_class_name|lower %}
                   {% ifchanged exportable_type %}
                     <div class="flex">
-                      <input type="checkbox" data-bucket="singles" data-type="{{ exportable_type }}" class="bucket-toggle-type" />
-                      &nbsp;{{ exportable|verbose_name_plural|capfirst }}
+                      <temba-checkbox data-bucket="singles"
+                                      data-type="{{ exportable_type }}"
+                                      label="{{ exportable|verbose_name_plural|capfirst }}"
+                                      class="bucket-toggle-type">
+                      </temba-checkbox>
                     </div>
                   {% endifchanged %}
                   <div class="w-2/5 inline-flex pl-8">
-                    <input type="checkbox"
-                           name="{{ exportable_type }}s"
-                           value="{{ exportable.id }}"
-                           data-bucket="singles"
-                           data-type="{{ exportable_type }}" />
-                    &nbsp;{{ exportable.name }}
+                    <temba-checkbox name="{{ exportable_type }}s"
+                                    value="{{ exportable.id }}"
+                                    data-bucket="singles"
+                                    data-type="{{ exportable_type }}"
+                                    label="{{ exportable.name }}">
+                    </temba-checkbox>
                   </div>
                 {% endwith %}
               {% endfor %}
