--- a/templates/api/v2/api_explorer.html
+++ b/templates/api/v2/api_explorer.html
@@ -175,9 +175,17 @@
         }).then(function(response) {
           results.innerText = "HTTP/1.0 " + response.status + " " + "\n" + response.body;
         });
-      } else {
+      } else if (method == "POST") {
         store.postUrl(url + query, body, headers).then(function(response) {
           results.innerText = "HTTP/1.0 " + response.status + " " + "\n" + response.body;
+        });
+      } else if (method == "DELETE") {
+        $.ajax({
+          url: url + query,
+          type: 'DELETE',
+          complete: function(xhr) {
+            results.innerText = "HTTP/1.0 " + xhr.status + " " + "\n" + xhr.responseText;
+          }
         });
       }
     }
