Fixes for login and API titles

--- a/templates/api/v2/api_explorer.html
+++ b/templates/api/v2/api_explorer.html
@@ -194,6 +194,10 @@
 {% block extra-style %}
   {{ block.super }}
   <style type="text/css">
+    .main-logo {
+      margin: 1.5em;
+    }
+
     .content-card {
       width: 80%;
     }
