--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -6,6 +6,8 @@
 {% endblock html-tag %}
   %head
     %title
+      -block head-title
+        {{title}}
 
     %meta{charset:"utf-8"}
     %meta{name:"viewport", content:"width=device-width, initial-scale=1.0"}
