Some tweaks to templates based on linter

--- a/templates/channels/types/android/claim.html
+++ b/templates/channels/types/android/claim.html
@@ -12,7 +12,7 @@
           {% csrf_token %}
           {% render_field 'claim_code' %}
           {% render_field 'phone_number' %}
-          <input type="submit" value="{% trans 'Add Android Channel' %}" class="mt-4 button-primary">
+          <input type="submit" value="{% trans "Add Android Channel" %}" class="mt-4 button-primary">
           <errors></errors>
         </form>
       </div>
