--- a/templates/channels/types/clickatell/claim.html
+++ b/templates/channels/types/clickatell/claim.html
@@ -3,7 +3,7 @@
 
 {% block pre-form %}
   {% blocktrans trimmed %}
-    To connect a <a href="http://clickatell.com">Clickatell</a> number, first create an HTTP integration for a two way number, then
+    To connect a <a href="https://clickatell.com">Clickatell</a> number, first create an HTTP integration for a two way number, then
     enter the number and API key below.
   {% endblocktrans %}
   <div class="my-4">
