--- a/templates/channels/types/dmark/claim.html
+++ b/templates/channels/types/dmark/claim.html
@@ -3,7 +3,7 @@
 
 {% block pre-form %}
   {% blocktrans trimmed with name=brand.name %}
-    You can connect your <a href="http://dmarkmobile.com/">DMark Mobile</a> number to {{ name }} using the fields below. You
+    You can connect your <a href="https://dmarkmobile.com/">DMark Mobile</a> number to {{ name }} using the fields below. You
     will first need to create a DMark Mobile account and receive a username and password from them to use below.
   {% endblocktrans %}
 {% endblock pre-form %}
