--- a/templates/channels/types/facebook/config.html
+++ b/templates/channels/types/facebook/config.html
@@ -5,7 +5,7 @@
   Messenger settings page. Make sure to check all boxes within the 'Webhooks' section to subscribe to incoming Facebook events and referral parameters in the following list.
 {% endblocktrans %}
 <div class="card">
-  <div class="subtitle">{% trans 'Referral Parmeters' %}</div>
+  <div class="subtitle">{% trans "Referral Parmeters" %}</div>
   <div class="code inline-block m-1">messaging_referrals</div>
   <div class="code inline-block m-1">messages</div>
   <div class="code inline-block m-1">messsages_deliveries</div>
@@ -16,7 +16,7 @@
   <div class="code inline-block m-1">messaging_referrals</div>
 </div>
 <div class="mt-4 card">
-  <div class="subtitle">{% trans 'Permissions' %}</div>
+  <div class="subtitle">{% trans "Permissions" %}</div>
   {% blocktrans trimmed with subscriptions='<div class="code inline py-1 px-2">pages_messaging_subscriptions</div>' messaging='<div class="code inline py-1 px-2">pages_messaging</div>' %}
   When submitting your application for approval, make sure to include the {{ messaging }}
   and {{ subscriptions }} permissions so that you are able to initiate conversations with your contacts.
