--- a/templates/channels/types/facebookapp/refresh_token.html
+++ b/templates/channels/types/facebookapp/refresh_token.html
@@ -18,7 +18,7 @@
     <div class="flex" id="fb-app-connect">
       <div class="button-primary connect-facebook">{% trans "Reconnect Facebook page" %}</div>
     </div>
-    <form style="display:none;" method="POST" action="{{ refresh_url }}" id="refresh-token-form">
+    <form style="display:none;" method="post" action="{{ refresh_url }}" id="refresh-token-form">
       {% csrf_token %}
       <input type="text" name="fb_user_id" id="fb-user-id">
       <input type="text" name="user_access_token" id="user-access-token">
