Cleanup page titles in settings section

--- a/templates/orgs/user_account.html
+++ b/templates/orgs/user_account.html
@@ -1,5 +1,5 @@
 {% extends "smartmin/read.html" %}
-{% load temba compress smartmin i18n %}
+{% load i18n %}
 
 {% block content %}
   {% if not two_factor_enabled %}
