--- a/templates/orgs/org_manage_accounts.html
+++ b/templates/orgs/org_manage_accounts.html
@@ -1,12 +1,6 @@
 {% extends "smartmin/form.html" %}
 {% load smartmin temba compress i18n %}
 
-{% block title-text %}
-  {% trans "Manage Logins" %}
-{% endblock title-text %}
-{% block subtitle %}
-  {{ org.name|capfirst }}
-{% endblock subtitle %}
 {% block extra-style %}
   {{ block.super }}
   <style type="text/css">
@@ -61,7 +55,7 @@
     </tbody>
   </table>
   <div class="card">
-    <div class="title mb-0 pb-0">{% trans "Invite New Users" %}</div>
+    <div class="text-xl mb-0 pb-0">{% trans "Invite New Users" %}</div>
     <div class="flex w-full items-end">
       <div class="pr-4 flex-grow">{% render_field 'invite_emails' %}</div>
       <div class="group w-48">{% render_field 'invite_role' %}</div>
