--- a/templates/orgs/org_workspace.html
+++ b/templates/orgs/org_workspace.html
@@ -1,10 +1,6 @@
 {% extends "smartmin/read.html" %}
-{% load temba compress smartmin i18n %}
+{% load i18n %}
 
-{% block page-title %}
-  {{ user_org.name|capfirst }}
-{% endblock page-title %}
 {% block content %}
-  {% for channel in channels %}<div class="mt-2">{{ channel.name }}</div>{% endfor %}
   {% include "formax.html" %}
 {% endblock content %}
