--- a/templates/spa_page_menu.html
+++ b/templates/spa_page_menu.html
@@ -1,27 +1,28 @@
--load public
+{% load public %}
 
-%temba-content-menu#default-content-menu(endpoint="{{request.path}}?{{request.GET.urlencode}}" query="{{has_search_query}}" -temba-selection="handleContentMenuSelected(event)")
-
-:javascript
-
+<temba-content-menu endpoint="{{ request.path }}?{{ request.GET.urlencode }}"
+                    query="{{ has_search_query }}"
+                    -temba-selection="handleContentMenuSelected(event)"
+                    id="default-content-menu">
+</temba-content-menu>
+<script type="text/javascript">
   function handleContentMenuSelected(event) {
     // handles when items are clicked in the top right hamburger menu
     var item = event.detail.item;
     var click = event.detail.event;
-    
+
     if (item.type === 'link') {
       if (click) {
         click.preventDefault();
-        click.stopPropagation();   
+        click.stopPropagation();
         if (click.metaKey && item.url) {
           window.open(item.url, '_blank');
           return;
-        }  
+        }
       }
-  
+
       fetchURL(item.url);
-    }
-    else if (item.type === 'modax') {
+    } else if (item.type === 'modax') {
       var modaxOptions = {
         disabled: item.disabled,
         onSubmit: item.on_submit,
@@ -29,8 +30,7 @@
         id: item.modal_id
       }
       showModax(item.title, item.url, modaxOptions);
-    }
-    else if (item.type === 'url_post') {
+    } else if (item.type === 'url_post') {
       var store = document.querySelector('temba-store');
       const queryStart = item.url.indexOf('?');
       const urlParams = new URLSearchParams(item.url.substring(queryStart));
@@ -41,10 +41,10 @@
         url = item.url.substring(0, queryStart);
         for (key of urlParams.keys()) {
           payload[key] = urlParams.get(key);
-        }  
+        }
       }
 
-      store.postForm(url, payload).then(function (response) {
+      store.postForm(url, payload).then(function(response) {
         if (response.redirected) {
           fetchURL(response.url);
         } else {
@@ -63,3 +63,4 @@
       menu.refresh();
     }
   }
+</script>
