Fix Javascript on claim number view

--- a/templates/channels/channel_claim_number.html
+++ b/templates/channels/channel_claim_number.html
@@ -33,7 +33,7 @@
               </temba-textinput>
             {% endblock search-pattern %}
           </div>
-          <input type="submit" value="{% trans 'Search' %}" class="button-primary">
+          <input type="submit" value="{% trans "Search" %}" class="button-primary">
         </div>
       </form>
       <div class="twilio-numbers-title"></div>
