--- a/templates/channels/channel_claim_number.html
+++ b/templates/channels/channel_claim_number.html
@@ -132,7 +132,8 @@
       return false;
     }
 
-    onSpload(function() {
+    // TODO figure out why onSpload not being called when navigating here
+    $(function() {
       // the user has clicked a number from search results
       $("#results").on('click', ".phone-number", function(e) {
         var country = document.querySelector("#country").values[0].value;
@@ -144,6 +145,8 @@
 
       // the user has clicked an existing number in their account
       $("#account-numbers").on('click', ".phone-number", function(e) {
+        console.log("clicked")
+
         $("#phone-number").val($(this).data("number"));
         $("#claim-country").val($(this).data("country"));
         $("#claim-form").submit();
