Add simpler way to configure channel configuration URLs

--- a/templates/channels/channel_configuration.html
+++ b/templates/channels/channel_configuration.html
@@ -18,7 +18,7 @@
     <div class="card mt-6 flex-shrink-0">
       <div class="title">{{ url.label }}</div>
       <div class="code inline-block mt-3 whitespace-normal">{{ url.url }}</div>
-      <div class="my-4">{{ url.description }}</div>
+      <div class="my-4">{{ url.help }}</div>
     </div>
   {% endfor %}
   {% if show_public_addresses %}
