--- a/templates/channels/channel_configuration.html
+++ b/templates/channels/channel_configuration.html
@@ -20,7 +20,7 @@
       {% if url.help %}
       <div class="mt-2">{{ url.help }}</div>
       {% endif %}
-      <div class="code inline-block mt-3 whitespace-normal">{{ url.url }}</div>
+      <div class="code block mt-3 mx-0 whitespace-normal">{{ url.url }}</div>
     </div>
   {% endfor %}
   {% if show_public_addresses %}
