Add 'Send Now' to broadcast creation
 * Selection at the end of broadcast creation
   pipeline to send now or schedule for later
 * Switch Send Message to New Broadcast and
   point it to the broadcast pipleline. This
   includes on contact lists and the message
   inbox

--- a/templates/includes/short_pagination.html
+++ b/templates/includes/short_pagination.html
@@ -61,16 +61,12 @@
         {% endif %}
         {% if 'send' in actions %}
           {% if org_perms.msgs.broadcast_send and not reply_disabled %}
-            <temba-modax header="{{ _("Send Message") |escapejs }}"
-                         endpoint="{% url 'msgs.broadcast_send' %}"
-                         id="send-message-modal">
-              <div onclick="handleSendMessageClicked()" class="linked ml-4">
-                <temba-tip position="top" text="{{ _("Send Message") |escapejs }}">
-                  <temba-icon name="message" clickable="true">
-                  </temba-icon>
-                </temba-tip>
-              </div>
-            </temba-modax>
+            <div onclick="handleSendMessageClicked()" class="linked ml-4">
+              <temba-tip position="top" text="{{ _("New Broadcast") |escapejs }}">
+                <temba-icon name="message" clickable="true">
+                </temba-icon>
+              </temba-tip>
+            </div>
           {% endif %}
         {% endif %}
         {% if 'delete' in actions %}
