--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -353,14 +353,17 @@
 
     function handleSendMessageClicked() {
       // when we click send, include any clicked messages in our modax request
-      var sendEndpoint = "{% url 'msgs.broadcast_send' %}";
-      var sendModal = document.querySelector("#send-message-modal");
+      var sendEndpoint = "{% url 'msgs.broadcast_create' %}";
+      var sendModal = document.querySelector("#shared-modax");
+      sendModal.header = '{{_("New Broadcast")|escapejs}}';
       var ids = getCheckedUuids();
       if (ids.length > 0) {
         sendModal.setAttribute("endpoint", sendEndpoint + '?c=' + ids);
       } else {
         sendModal.setAttribute("endpoint", sendEndpoint);
       }
+
+      sendModal.open = true;
     }
 
     // keeps track if we are on a link or not
