--- a/templates/msgs/message_box.html
+++ b/templates/msgs/message_box.html
@@ -158,14 +158,16 @@
     }
 
     function handleSendMessageClicked() {
-      var sendEndpoint = "{% url 'msgs.broadcast_send' %}";
-      var sendModal = document.querySelector("#send-message-modal");
+      var sendEndpoint = "{% url 'msgs.broadcast_create' %}";
+      var sendModal = document.querySelector("#shared_modax");
       var msgIds = getCheckedIds();
       if (msgIds.length > 0) {
         sendModal.setAttribute("endpoint", sendEndpoint + '?m=' + msgIds);
       } else {
         sendModal.setAttribute("endpoint", sendEndpoint);
       }
+
+      sendModal.open = true;
     }
     {% endif %}
 
