Show total in navigation of stock chart

--- a/templates/dashboard/home.html
+++ b/templates/dashboard/home.html
@@ -112,8 +112,8 @@
           },
           navigator: {
             series: {
-              stacking: 'normal',
-              type: 'column'
+
+              type: 'line'
             }
           },
           series: data
